--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -21,7 +21,7 @@ body {
   text-align: center;
   height: 100vh;
   color: #e7e7e7;
-  background-color: #1b1c1d;
+  background-color: #151718;
 }
 
 img {
